WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277065
[WebXR] Debug assertion as completion handler is not called
https://bugs.webkit.org/show_bug.cgi?id=277065
Summary
[WebXR] Debug assertion as completion handler is not called
Mike Wyrzykowski
Reported
2024-07-24 21:00:11 PDT
[WebXR] Debug assertion as completion handler is not called
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-24 21:00:28 PDT
<
rdar://problem/132457046
>
Mike Wyrzykowski
Comment 2
2024-07-24 21:02:52 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31207
EWS
Comment 3
2024-07-25 18:02:09 PDT
Committed
281382@main
(6d0297751332): <
https://commits.webkit.org/281382@main
> Reviewed commits have been landed. Closing PR #31207 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug