[WebXR] Debug assertion as completion handler is not called https://bugs.webkit.org/show_bug.cgi?id=277065 rdar://132457046

Reviewed by Dan Glastonbury.

CompletionHandler will assert in debug if it is not called,
no behavioral change since the completion handler does nothing
in this case.

* Source/WebKit/UIProcess/XR/PlatformXRSystem.cpp:
(WebKit::PlatformXRSystem::setImmersiveSessionState):

Canonical link: https://commits.webkit.org/281382@main